[FLINK-21326] Optimize the topology building in ExecutionGraph
This closes #14868.